fixed blog title issue when one word is too long and did not break

--- a/style.scss
+++ b/style.scss
@@ -1238,6 +1238,7 @@ body.international .shopping-cart .section-content {
 				}
 				.post-title {
 					padding-bottom: 10px;
+					word-wrap: break-word;
 				}
 				.post-meta {
 					padding-bottom: 10px;
@@ -3120,6 +3121,7 @@ body.international .shopping-cart .section-content {
 				}
 				.post-title {
 					padding-bottom: 10px;
+					word-wrap: break-word;
 				}
 				.post-meta {
 					padding-bottom: 10px;
